--- a/user.yml
+++ b/user.yml
@@ -1,7 +1,7 @@
 --- # Personal information
-first: FIRST_NAME
-last: LAST_NAME
-watiam: WATIAM_ID
-student: STUDENT_ID
-email: email
+first: Runqi
+last: Wu
+watiam: r77wu
+student: 20810363
+email: r77wu@uwaterloo.ca
 ...
